--- a/styles/news-feed.css
+++ b/styles/news-feed.css
@@ -13,14 +13,14 @@
 }
 
 .feed-item {
-    background-color: lightsteelblue;
-    border: 2px solid lightgray;
+    border: 2px solid #336699;
     margin: 20px 0px 20px 0px;
     padding: 4px;
 }
 
 .feed-header {
-    background-color: skyblue;
+    text-decoration:none;
+    border-bottom: 2px solid #336699;
     width: 100%;
     color: black;
     font-weight: bold;
