--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,12 @@ body {
     font-weight: 300;
     line-height: 1.4;
 }
+
+#bloc1, #bloc2
+{
+    display:inline;
+}
+
 .maint1{
     text-align:center;
     margin-bottom: 150px;
