--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
     background: #fff;
-    font-family: 'courier', sans-serif;
+    font-family: 'times', sans-serif;
     font-weight: 300;
     line-height: 1.4;
 }
@@ -30,7 +30,7 @@ aside {
 }
 p {
     color: #111;
-    font-family: 'courier', sans-serif;
+    font-family: 'times', sans-serif;
     font-size: 100%;
     font-weight: normal
 }
