--- a/_layouts/sulfastor-homepage.html
+++ b/_layouts/sulfastor-homepage.html
@@ -98,7 +98,7 @@
 	  <li><a href="/jokes">Jokes</a></li>
 
 	  <!-- Curriculum -->
-	  <li><a href="/soon">Curriculum</a></li>
+	  <li><a href="/cv">Curriculum</a></li>
 
 	  <!-- Chinese Poems -->
 	  <li><a href="/zhongguo_poems">Chinese Poems</a></li>
